// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration tests deeply nested component (3) client render append meta tag Html > head | app 1`] = `"<div><div><div>content</div></div></div>"`;

exports[`integration tests deeply nested component (3) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests deeply nested component (3) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) client render append meta tag Html > head | body > app 1`] = `"<div><div><div>content</div></div></div>"`;

exports[`integration tests deeply nested component (3) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests deeply nested component (3) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) client render append meta tag withHtml > head 1`] = `"<div><div><div>content</div></div></div>"`;

exports[`integration tests deeply nested component (3) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests deeply nested component (3) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) client render append meta tag withHtml > html > head 1`] = `"<div><div><div>content</div></div></div>"`;

exports[`integration tests deeply nested component (3) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests deeply nested component (3) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>content</div></div></div></div></body></html>"`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>content</div></div></div></div></body></html>"`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>content</div></div></div></div></body></html>"`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>content</div></div></div></div></body></html>"`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>content</div></div></div></div></body></html>"`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>content</div></div></div></div></body></html>"`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>content</div></div></div></div></body></html>"`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>content</div></div></div></div></body></html>"`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests deeply nested component (3) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) client render append meta tag Html > head | app 1`] = `"<div><div>content</div></div>"`;

exports[`integration tests nested component (2) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests nested component (2) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) client render append meta tag Html > head | body > app 1`] = `"<div><div>content</div></div>"`;

exports[`integration tests nested component (2) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests nested component (2) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) client render append meta tag withHtml > head 1`] = `"<div><div>content</div></div>"`;

exports[`integration tests nested component (2) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests nested component (2) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) client render append meta tag withHtml > html > head 1`] = `"<div><div>content</div></div>"`;

exports[`integration tests nested component (2) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests nested component (2) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>content</div></div></div></body></html>"`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>content</div></div></div></body></html>"`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>content</div></div></div></body></html>"`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>content</div></div></div></body></html>"`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests nested component (2) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>content</div></div></div></body></html>"`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>content</div></div></div></body></html>"`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>content</div></div></div></body></html>"`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>content</div></div></div></body></html>"`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests nested component (2) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) client render append meta tag Html > head | app 1`] = `"<div>content</div>"`;

exports[`integration tests root component (1) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests root component (1) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) client render append meta tag Html > head | body > app 1`] = `"<div>content</div>"`;

exports[`integration tests root component (1) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests root component (1) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) client render append meta tag withHtml > head 1`] = `"<div>content</div>"`;

exports[`integration tests root component (1) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests root component (1) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) client render append meta tag withHtml > html > head 1`] = `"<div>content</div>"`;

exports[`integration tests root component (1) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests root component (1) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div>content</div></div></body></html>"`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div>content</div></div></body></html>"`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div>content</div></div></body></html>"`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div>content</div></div></body></html>"`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component (1) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div>content</div></div></body></html>"`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div>content</div></div></body></html>"`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div>content</div></div></body></html>"`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div>content</div></div></body></html>"`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component (1) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) client render append meta tag Html > head | app 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests root component with nested siblings (3) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests root component with nested siblings (3) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) client render append meta tag Html > head | body > app 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests root component with nested siblings (3) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests root component with nested siblings (3) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) client render append meta tag withHtml > head 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests root component with nested siblings (3) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests root component with nested siblings (3) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) client render append meta tag withHtml > html > head 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests root component with nested siblings (3) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests root component with nested siblings (3) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings (3) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag Html > head | app 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag Html > head | body > app 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag withHtml > head 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag withHtml > html > head 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests root component with nested siblings using a fragment (3) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Root\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests root component with nested siblings using a fragment (3) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Root"
    />,
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) client render append meta tag Html > head | app 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests sibling components (2) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests sibling components (2) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) client render append meta tag Html > head | body > app 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests sibling components (2) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests sibling components (2) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) client render append meta tag withHtml > head 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests sibling components (2) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests sibling components (2) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) client render append meta tag withHtml > html > head 1`] = `"<div><div>sibling a</div><div>sibling b</div></div>"`;

exports[`integration tests sibling components (2) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests sibling components (2) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components (2) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components (2) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag Html > head | app 1`] = `"<div><div><div>sibling a</div></div><div><div>sibling b</div></div></div>"`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag Html > head | body > app 1`] = `"<div><div><div>sibling a</div></div><div><div>sibling b</div></div></div>"`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag withHtml > head 1`] = `"<div><div><div>sibling a</div></div><div><div>sibling b</div></div></div>"`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag withHtml > html > head 1`] = `"<div><div><div>sibling a</div></div><div><div>sibling b</div></div></div>"`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests sibling components, both siblings have nested component (4) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, both siblings have nested component (4) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag Html > head | app 1`] = `"<div><div>sibling a</div><div><div>sibling b</div></div></div>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag Html > head | body > app 1`] = `"<div><div>sibling a</div><div><div>sibling b</div></div></div>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag withHtml > head 1`] = `"<div><div>sibling a</div><div><div>sibling b</div></div></div>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag withHtml > html > head 1`] = `"<div><div>sibling a</div><div><div>sibling b</div></div></div>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests sibling components, bottom sibling has nested component (3) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Bottom Sibling\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div>sibling a</div><div><div>sibling b</div></div></div></div></body></html>"`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, bottom sibling has nested component (3) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Bottom Sibling"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag Html > head | app 1`] = `"<div><div><div>sibling a</div></div><div>sibling b</div></div>"`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag Html > head | app 2`] = `Object {}`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag Html > head | body > app 1`] = `"<div><div><div>sibling a</div></div><div>sibling b</div></div>"`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag Html > head | body > app 2`] = `Object {}`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag withHtml > head 1`] = `"<div><div><div>sibling a</div></div><div>sibling b</div></div>"`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag withHtml > head 2`] = `Object {}`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag withHtml > html > head 1`] = `"<div><div><div>sibling a</div></div><div>sibling b</div></div>"`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag withHtml > html > head 2`] = `Object {}`;

exports[`integration tests sibling components, top sibling has nested component (3) client render append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 1`] = `"<html><head><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToStaticMarkup append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag Html > head | app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag Html > head | app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag Html > head | app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag Html > head | body > app 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag Html > head | body > app 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag Html > head | body > app 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag withHtml > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag withHtml > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag withHtml > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag withHtml > html > head 1`] = `"<html><head data-reactroot=\\"\\"><meta name=\\"Top Sibling Title\\" content=\\"meta content\\"/><meta name=\\"Top Sibling Child\\" content=\\"meta content\\"/><meta name=\\"Rendered\\" content=\\"meta content\\"/></head><body><div id=\\"app\\"><div><div><div>sibling a</div></div><div>sibling b</div></div></div></body></html>"`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag withHtml > html > head 2`] = `
Object {
  "appAttributes": Object {
    "id": "app",
  },
  "appTagName": "div",
}
`;

exports[`integration tests sibling components, top sibling has nested component (3) server renderHtmlToString append meta tag withHtml > html > head 3`] = `
Object {
  "meta": Array [
    <meta
      content="meta content"
      name="Top Sibling Title"
    />,
    <meta
      content="meta content"
      name="Top Sibling Child"
    />,
    <meta
      content="meta content"
      name="Rendered"
    />,
  ],
}
`;
